--- a/rentizapan/package.json
+++ b/rentizapan/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rentizapan",
   "version": "1.0.0",
-  "description": "Encuentra el mejor lugar para vivir",
+  "description": "My sensational Nuxt.js project",
   "author": "jlimons",
   "private": true,
   "scripts": {
