--- a/rentizapan/package.json
+++ b/rentizapan/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cross-env": "^5.2.0",
     "firebase": "^6.0.1",
+    "numeral": "^2.0.6",
     "nuxt": "^2.6.3",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1"
